--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "HealthCare",
   "version": "0.0.1",
   "private": true,
+  "main": "src/index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,28 +11,47 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "firebase": "^9.12.1",
-    "react": "18.1.0",
-    "react-native": "0.70.3"
+    "@notifee/react-native": "^7.1.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/blur": "^4.3.0",
+    "@react-native-community/netinfo": "^9.3.6",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "^6.0.13",
+    "@reduxjs/toolkit": "^1.9.0",
+    "@shopify/react-native-skia": "^0.1.157",
+    "@types/react-native-vector-icons": "^6.4.12",
+    "firebase": "^9.14.0",
+    "react": "18.2.0",
+    "react-hook-form": "^7.39.3",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-graph": "^0.3.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-reanimated": "^2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/core": "^7.20.2",
+    "@babel/runtime": "^7.20.1",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.2",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-native": "^0.70.4",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@types/react-native": "^0.70.6",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
-    "react-test-renderer": "18.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "babel-jest": "^29.3.1",
+    "eslint": "^8.27.0",
+    "jest": "^29.3.1",
+    "metro-react-native-babel-preset": "0.73.3",
+    "react-test-renderer": "18.2.0",
     "typescript": "^4.8.4"
   },
   "jest": {
