--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/netinfo": "^9.3.6",
+    "@react-native-firebase/app": "^16.4.4",
+    "@react-native-firebase/auth": "^16.4.4",
+    "@react-native-firebase/database": "^16.4.4",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@reduxjs/toolkit": "^1.9.0",
     "@shopify/react-native-skia": "^0.1.157",
     "@types/react-native-vector-icons": "^6.4.12",
-    "firebase": "^9.14.0",
     "react": "18.2.0",
     "react-hook-form": "^7.39.3",
     "react-native": "0.70.5",
@@ -32,7 +34,8 @@
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
@@ -51,8 +54,7 @@
     "eslint": "^8.27.0",
     "jest": "^29.3.1",
     "metro-react-native-babel-preset": "0.73.3",
-    "react-test-renderer": "18.2.0",
-    "typescript": "^4.8.4"
+    "react-test-renderer": "18.2.0"
   },
   "jest": {
     "preset": "react-native",
