--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
-// prettier-ignore
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",     /* Recommended React Native TSConfig base */
-  "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig.json to read more about this file */
-
-    /* Completeness */
-    "jsx": "react-jsx",
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+    "extends": "@tsconfig/react-native/tsconfig.json",
+    "compilerOptions": {
+        "jsx": "react-jsx",
+        "skipLibCheck": true
+    }
 }
